samples/_failures_safe/1761043376_19fad8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d7df119.c: In function ‘main’:
./samples/SAFE/__tmp_8d7df119.c:166:9: error: expected expression at end of input
  166 |         float ratio = ((float)compressed_buffer.size / (float)
      |         ^~~~~
./samples/SAFE/__tmp_8d7df119.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8d7df119.c:166:9: error: expected declaration or statement at end of input
